fix display numbers overflowing

--- a/styles.css
+++ b/styles.css
@@ -89,6 +89,7 @@ select {
 	justify-content: center;
 	align-items: center;
 	font-size: 3.5rem;
+	word-break: break-all;
 }
 
 .operators {
